--- a/index.html
+++ b/index.html
@@ -12,9 +12,22 @@
     <title></title>
   </head>
   <body>
-    <h1></h1>
-    <p>
-    </p>
+    <section>
+      <div class="client-circle">
+      </div>
+      <div class="client-circle">
+      </div>
+      <div class="client-circle">
+      </div>
+   </section>
+   <section>
+      <div class="client-circle">
+      </div>
+      <div class="client-circle">
+      </div>
+      <div class="client-circle">
+      </div>
+   </section>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
