created cicles for each company

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title></title>
   </head>
   <body>
-    <section>
+    <section class="circle-group-one">
       <div class="client-circle">
       </div>
       <div class="client-circle">
@@ -20,7 +20,7 @@
       <div class="client-circle">
       </div>
    </section>
-   <section>
+   <section class="circle-group-two">
       <div class="client-circle">
       </div>
       <div class="client-circle">
