added sass file, recreated circle styles

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <link rel="stylesheet" href="css/main.css">
     <title></title>
   </head>
-  <body>
-    <section class="circle-group-one">
+  <body class="container">
+    <section class="row circle-group-one">
       <div class="client-circle">
+        <h1 class="circle-company">Company Name</h1>
       </div>
       <div class="client-circle">
       </div>
       <div class="client-circle">
       </div>
    </section>
-   <section class="circle-group-two">
+   <section class="row circle-group-two">
       <div class="client-circle">
       </div>
       <div class="client-circle">
