added hover styles on circles

--- a/index.html
+++ b/index.html
@@ -17,16 +17,21 @@
         <h1 class="circle-company">Company Name</h1>
       </div>
       <div class="client-circle">
+        <h1 class="circle-company">Company Name</h1>
       </div>
       <div class="client-circle">
+        <h1 class="circle-company">Company Name</h1>
       </div>
    </section>
    <section class="row circle-group-two">
       <div class="client-circle">
+        <h1 class="circle-company">Company Name</h1>
       </div>
       <div class="client-circle">
+        <h1 class="circle-company">Company Name</h1>
       </div>
       <div class="client-circle">
+        <h1 class="circle-company">Company Name</h1>
       </div>
    </section>
     <script type="text/javascript" src="js/main.js"></script>
