added description section

--- a/index.html
+++ b/index.html
@@ -12,28 +12,56 @@
     <title></title>
   </head>
   <body class="container">
-    <section class="row circle-group-one">
-      <div class="client-circle">
-        <h1 class="circle-company">Company Name</h1>
-      </div>
-      <div class="client-circle">
-        <h1 class="circle-company">Company Name</h1>
-      </div>
-      <div class="client-circle">
-        <h1 class="circle-company">Company Name</h1>
-      </div>
-   </section>
-   <section class="row circle-group-two">
-      <div class="client-circle">
-        <h1 class="circle-company">Company Name</h1>
-      </div>
-      <div class="client-circle">
-        <h1 class="circle-company">Company Name</h1>
-      </div>
-      <div class="client-circle">
-        <h1 class="circle-company">Company Name</h1>
-      </div>
-   </section>
+    <section>
+      <section class="row circle-group-one">
+        <div class="client-circle">
+          <h1 class="circle-company">Vulcan</h1>
+        </div>
+        <div class="client-circle">
+          <h1 class="circle-company">Raikes Foundation</h1>
+        </div>
+        <div class="client-circle">
+          <h1 class="circle-company">Stolen Youth</h1>
+        </div>
+      </section>
+
+      <section class="row descrip-group-two">
+       <section class="descrip-company descrip-company-four">
+            Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,
+        </section>
+        <section class="descrip-company descrip-company-five">
+            Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,
+        </section>
+        <section class="descrip-company descrip-company-six">
+            Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,
+        </section>
+      </section>
+    </section>
+    <section>
+      <section class="row circle-group-two">
+        <div class="client-circle">
+          <h1 class="circle-company">FareStart</h1>
+        </div>
+        <div class="client-circle">
+          <h1 class="circle-company">YouthCare</h1>
+        </div>
+        <div class="client-circle">
+          <h1 class="circle-company">Friends of Youth</h1>
+        </div>
+      </section>
+      <section class="row descrip-group-two">
+       <section class="descrip-company descrip-company-four">
+            Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,
+        </section>
+        <section class="descrip-company descrip-company-five">
+            Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,
+        </section>
+        <section class="descrip-company descrip-company-six">
+            Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,
+        </section>
+      </section>
+    </section>
+
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
