added hovers descriptions to each circle

--- a/index.html
+++ b/index.html
@@ -12,56 +12,34 @@
     <title></title>
   </head>
   <body class="container">
-    <section>
       <section class="row circle-group-one">
-        <div class="client-circle">
+        <div class="client-circle Vulcan-cir">
           <h1 class="circle-company">Vulcan</h1>
+          <p class="descrip-company-Vulcan"> Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,</p>
         </div>
-        <div class="client-circle">
-          <h1 class="circle-company">Raikes Foundation</h1>
+        <div class="client-circle Raikes-cir">
+          <h1 class="circle-company ">Raikes Foundation</h1>
+          <p class="descrip-company-Raikes"> Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,</p>
         </div>
-        <div class="client-circle">
-          <h1 class="circle-company">Stolen Youth</h1>
+        <div class="client-circle Stolen-Youth-cir">
+          <h1 class="circle-company ">Stolen Youth</h1>
+          <p class="descrip-company-Stolen-Youth"> Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,</p>
         </div>
       </section>
-
-      <section class="row descrip-group-two">
-       <section class="descrip-company descrip-company-four">
-            Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,
-        </section>
-        <section class="descrip-company descrip-company-five">
-            Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,
-        </section>
-        <section class="descrip-company descrip-company-six">
-            Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,
-        </section>
-      </section>
-    </section>
-    <section>
       <section class="row circle-group-two">
-        <div class="client-circle">
-          <h1 class="circle-company">FareStart</h1>
+        <div class="client-circle FareStart-cir">
+          <h1 class="circle-company ">FareStart</h1>
+          <p class="descrip-company-FareStart"> Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,</p>
         </div>
-        <div class="client-circle">
+        <div class="client-circle YouthCare-cir">
           <h1 class="circle-company">YouthCare</h1>
+          <p class="descrip-company-YouthCare"> Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,</p>
         </div>
-        <div class="client-circle">
+        <div class="client-circle Friends-of-Youth-cir">
           <h1 class="circle-company">Friends of Youth</h1>
+          <p class="descrip-company-Friends-of-Youth"> Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,</p>
         </div>
       </section>
-      <section class="row descrip-group-two">
-       <section class="descrip-company descrip-company-four">
-            Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,
-        </section>
-        <section class="descrip-company descrip-company-five">
-            Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,
-        </section>
-        <section class="descrip-company descrip-company-six">
-            Lorem ipsum dolor sit amet, his nibh saperet definitiones te, pro ea blandit phaedrum. Vis soleat regione ne, vim natum libris philosophia ut, erat harum doctus at qui. Eam utinam instructior ne,
-        </section>
-      </section>
-    </section>
-
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
